# aktrack-ros

./: .gitignore  README.md  src_to_ws.bash
aktrack_ros/: CMakeLists.txt  package.xml
aktrack_ros/launch/: all.launch
aktrack_ros_comm/: CMakeLists.txt  config_comm.yaml  package.xml
aktrack_ros_comm/include/aktrack_ros_comm/: ros_side_hif_out_node.hpp  ros_side_in.hpp  ros_side_in_node.hpp  ros_side_out.hpp  ros_side_out_node.hpp
aktrack_ros_comm/launch/: comm_nodes.launch
aktrack_ros_comm/src/: ros_side_hif_out_node.cpp  ros_side_in.cpp  ros_side_in_node.cpp  ros_side_out.cpp  ros_side_out_node.cpp
aktrack_ros_comm/src/nodes/: node_ak_comm_hif_out.cpp  node_ak_comm_in.cpp  node_ak_comm_out.cpp  node_comm_end.cpp
aktrack_ros_comm_decode/: CMakeLists.txt  config_comm_decode.yaml  package.xml
aktrack_ros_comm_decode/include/aktrack_ros_comm_decode/: function_map_ak.hpp
aktrack_ros_comm_decode/include/rotms_ros_comm_decode/: decode_node.hpp
aktrack_ros_comm_decode/launch/: comm_decode_nodes.launch
aktrack_ros_comm_decode/src/: decode_node.cpp  function_map_ak.cpp
aktrack_ros_comm_decode/src/nodes/: node_decode_ak.cpp
aktrack_ros_dispatcher/: CMakeLists.txt  package.xml
aktrack_ros_dispatcher/include/aktrack_ros_dispatcher/: aktrack_dispatcher.hpp  dispatcher_utility.hpp
aktrack_ros_dispatcher/include/rotms_ros_dispatcher/: aktrack_dispatcher.hpp
aktrack_ros_dispatcher/launch/: dispatcher_nodes.launch
aktrack_ros_dispatcher/src/: aktrack_dispatcher.cpp  dispatcher_utility.cpp
aktrack_ros_dispatcher/src/nodes/: node_dispatcher.cpp
aktrack_ros_kinematics/: CMakeLists.txt  package.xml
aktrack_ros_kinematics/include/aktrack_ros_kinematics/: transform_conversions.hpp
aktrack_ros_kinematics/include/rotms_ros_kinematics/: transform_conversions.hpp
aktrack_ros_kinematics/launch/: kinematics_nodes.launch
aktrack_ros_kinematics/share/: cntct_offset.yaml  sticker_panelref.yaml  trackerref_trackercent.yaml
aktrack_ros_kinematics/src/: transform_conversions.cpp
aktrack_ros_kinematics/src/nodes/: node_TRE_t_body_ptrtip.cpp  node_calibration_data.cpp  node_dataac_t_joystick.cpp  node_dataac_t_sticker_trackercent.cpp  node_opttracker_tr_bodyref_ptrtip.cpp  node_robot_eff.cpp  node_t_joystick.cpp  node_t_sticker_trackercent copy.cpp  node_t_sticker_trackercent.cpp  node_viz_t_joystick.cpp  node_viz_t_sticker_trackercent.cpp  node_viz_tr_body_tool.cpp  node_viz_tr_body_tool_test.cpp
aktrack_ros_universal_utility/: CMakeLists.txt  package.xml
aktrack_ros_universal_utility/include/aktrack_ros_universal_utility/: ros_print_color_def.hpp
aktrack_ros_universal_utility/include/rotms_ros_universal_utility/: ros_print_color.hpp
